fix: adjustments for image listings. Word break on too long image names

--- a/styles/components/forms.css
+++ b/styles/components/forms.css
@@ -109,6 +109,7 @@
       margin-bottom: var(--spacing-small);
       & label {
         display: flex;
+        align-items: center;
       }
       & .admin-form__label {
         margin-bottom: 0;
