--- a/styles/components/thumbnail.css
+++ b/styles/components/thumbnail.css
@@ -13,6 +13,7 @@
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
   background-color: var(--white);
+  border: 2px solid transparent;
   &:hover {
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     cursor: pointer;
@@ -52,6 +53,11 @@
   background-color: var(--admin-primary);
   color: var(--white);
 }
+
+.thumbnail--active {
+  border: 2px solid var(--admin-green);
+}
+
 .thumbnail__select-button {
   display: none;
   align-items: center;
@@ -61,7 +67,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: var(--spacing-large);
+  padding: var(--spacing-small);
   height: 100%;
 }
 
@@ -81,6 +87,11 @@
   & img {
     max-width: 100%;
   }
+}
+
+.thumbnail__name {
+  max-width: 200px;
+  word-break: break-all;
 }
 
 .thumbnail__image-info {
